css/style.css
:root {
    --c-light-green: #52FFB6;
    --c-dark-green: #031519;
    --c-dark-green-2: #112C32;
    --c-primary-font:  'Inter', Arial, sans-serif;
    --c-primary-text-color: #fff;
}

body {
    margin: 0;
    padding: 0;
    font-size: 16px; /* Base font size */
    background-color: var(--c-dark-green);
    color: var(--c-primary-text-color);
}

h1, h2, h3, h4, p, .subtitle-1, .subtitle-2, .c-body-l, .c-body-xl {
    font-family: var(--c-primary-font);
    letter-spacing: 0em;
}

h2, h3, h4, .subtitle-1, .subtitle-2 {
    font-weight: 300;
}

.c-body-l, .c-body-xl {
    font-weight: 400;
}

h1 {
    font-size: 4em; /* Equivalent to 64px / 16px */
    font-weight: 200;
    line-height: 120%;
    text-align: left;
}

h2 {
    font-size: 3.5em; /* Equivalent to 56px / 16px */
    line-height: 110%;
    text-align: center;
    color: #fff;
}

h3 {
    font-size: 3em; /* Equivalent to 48px / 16px */
    line-height: 100%;
    text-align: center;
    color: #fff;
}

h4 {
    font-size: 2em; /* Equivalent to 32px / 16px */
    font-weight: 300;
    line-height: 105%;
    text-align: center;
    color: #fff;
}


.subtitle-1 {
    font-size: 1.5em; /* Equivalent to 24px / 16px */
    line-height: 100%;
    text-align: left;
    color: var(--c-light-green);
}

.subtitle-2 {
    font-size: 1em; /* Equivalent to 16px / 16px */
    line-height: 100%;
    text-align: left;
}


.c-body-l {
    font-size: 1.5em; /* Equivalent to 24px / 16px */
    font-size: 24px;
    line-height: 130%;
    text-align: left;
}

.c-body-xl {
    font-size: 2em; /* Equivalent to 32px / 16px */
    line-height: 120%;
    letter-spacing: 0em;
    text-align: left;
}

.c-light-green-text {
    color: var(--c-light-green);
}

.c-align-left {
    text-align: left;
}

.c-align-center {
    text-align: center;
}

.c-mg-horizontal {
    margin-left: 8vw;
    margin-right: 8vw;
}

.c-mg-left {
    margin-left: 8vw;
}

.c-mg-right {
    margin-right: 8vw;
}

.c-pd-section {
    padding-top: 120px;
    padding-bottom: 120px;
}

.text-block {
    margin-left: auto;
    margin-right: auto;
    max-width: 795px;
}

.bg-dark-green-2 {
    background-color: var(--c-dark-green-2);
}


.c-btn {
    background-color: var(--c-light-green);
    border: 1px solid var(--c-light-green);
    padding: 16px 24px;
    border-radius: 8px;
    color: var(--c-dark-green);
    margin: 0 auto;
}

.c-btn-secondary {
    border: 3px solid var(--c-light-green);
    color: var(--c-light-green);
    padding: 15px 32px;
    border-radius: 16px;
}

.c-pill {
    background-color: var(--c-light-green);
    border: 1px solid var(--c-light-green);
    border-radius: 63px;
    padding: 12px 24px;
    text-align: center;
    text-transform: uppercase;
    color: var(--c-dark-green);
    width:-webkit-fit-content;
    width:-moz-fit-content;
    width:fit-content;
}

.c-step-pill {
    padding: 10px 24px;
    font-size: 16px;
    font-weight: 700;
    line-height: 19px;
}

/* SECTIONS */

header, #steps, #answer-questionnaire, #testimonials-container, #features-container, #help-contribute {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
}

#answer-questionnaire, #steps, header, #testimonials {
    margin-bottom: 120px;
}

header {    
    background: -o-linear-gradient(347.37deg, #031519 11.92%, #112C32 181.82%);    
    background: linear-gradient(102.63deg, #031519 11.92%, #112C32 181.82%);
    color: var(--c-primary-text-color);
    min-height: 720px;
    margin-left: 8vw;
    padding-top: 100px;
}

header .col-1, header .col-2 {    
    -ms-flex-preferred-size: 50%;    
        flex-basis: 50%;
}

header .col-2 {   
    text-align: right;
 }

 header {
    padding: 24px;
 }

 .c-cover-img {
    width: 100%;
 }


 
#steps {
    min-height: 890px;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
    /*margin-left: 8vw;
    margin-right: 8vw;
    margin-bottom: 120px;*/
}

#steps-container {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
        -ms-flex-direction: row;
            flex-direction: row;
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
    -webkit-box-align: start;
        -ms-flex-align: start;
            align-items: start;
    gap: 2%;

}

#steps .c-pill {
    padding: 8px 24px;
    font-weight: 700;
    font-size: 16px;
    line-height: 100%;
}

#features {
    min-height: 1000px;
    /*margin-left: 8vw;
    margin-right: 8vw;*/
}

#features-container {
   /* display: flex;
    flex-direction: row;
    justify-content: center;*/
    -ms-flex-wrap: wrap;
        flex-wrap: wrap;
    -webkit-box-align: start;
        -ms-flex-align: start;
            align-items: start;
    gap: 1%;
    row-gap: 5%;
}

.features-card {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
    -webkit-box-pack: justify;
        -ms-flex-pack: justify;
            justify-content: space-between;
    -webkit-box-align: start;
        -ms-flex-align: start;
            align-items: flex-start;
    border-radius: 16px;
    -ms-flex-preferred-size: 32%;
        flex-basis: 32%;
    padding: 32px;
    height: 370px;
    margin-bottom: 10px;
}

.features-card p {
    color: var(--c-primary-text-color);
    font-size: 22px;
}

.gumroad-cover {
    height: auto;
    width: 66%;
    border-radius: 16px;
}

#answer-questionnaire {
    min-height: 890px;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
   /* margin-bottom: 120px;*/
}

#answer-questionnaire .c-pill {
    color: var(--c-light-green);
    background-color: var(--c-dark-green-2);
    border: 1px solid var(--c-dark-green-2);
    border-radius: 16px;
    text-transform: capitalize;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    font-weight: 300;
    padding: 32px;
}

#answer-questionnaire .c-pill span {
    white-space: nowrap;
}

#answer-questionnaire p, 
#answer-questionnaire h2 {
    max-width: 890px;
    text-align: center;
}

.c-card-header {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    gap:3%;
}

.c-card img {
    -o-object-fit: contain;
       object-fit: contain;
}

#testimonials-container {
    -webkit-box-align: stretch;
        -ms-flex-align: stretch;
            align-items: stretch; /* This will make all items have the same height */
    gap: 2%;
}

#project-types-container {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
        -ms-flex-direction: row;
            flex-direction: row;
    gap:1%;
    max-width: 100vw;
    overflow: hidden;
}

#project-types-container li {
    list-style: none;
}

#about p, #about ol li, #help-contribute p {
    max-width: 750px;
    margin: 0 auto;
}

#about ol {
    margin-left: 35px;
}

#about ol li {
    margin-bottom: 20px;
}

#help-contribute {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
}

.c-card {
    padding: 48px 20px;
    border-radius: 16px;
    -ms-flex-preferred-size: 33%;
        flex-basis: 33%;
}

footer p.subtitle-2 {
    margin: 0;
    padding: 50px 0;
    text-align: center;
}

footer img {
    margin-bottom:5px;
}



@media (max-width: 800px) {
    html {
        font-size: 14px; /* Adjust the base font size for smaller screens */
    }

    .c-body-xl {
        font-size: 1.5em;
    }

    header {
        -webkit-box-pack: left;
            -ms-flex-pack: left;
                justify-content: left;
    }

    h2, #answer-questionnaire h2, #answer-questionnaire p {
        text-align: left;
    }

    header p {
        margin-right: 8vw;
    }

    header .col-2, .c-cover-img {
        display: none;
    }

    header .col-1 {
        -ms-flex-preferred-size: 100%;
            flex-basis: 100%;
        width: 100%;
    }

    #steps, #features {
        min-height: auto;
    }

    #steps-container, #testimonials-container, #project-types-container {
        -webkit-box-pack: start;
            -ms-flex-pack: start;
                justify-content: start;
        width: 100vw;
        overflow-x: auto;
        overflow-y: hidden;
        --webkit-overflow-scrolling: touch; /* for smooth scrolling on iOS */
    }

    #steps .c-card {
        min-width: 45vw;
    }


    #features {
        margin-bottom: 100px;
    }

    #features h2 {
        margin: 0 8vw;
    }

    .features-card {
        -ms-flex-preferred-size: 48%;
            flex-basis: 48%;
        height: 330px;
    }

    .gumroad-cover {
        display: none;
    }

    #testimonials, #features {
        margin-left: 0;
        margin-right: 0;
    }

    #testimonials .c-card {
        min-width: 55vw;
    }

    #answer-questionnaire p , #about p, #about ol li, #help-contribute p {
        max-width: 794px;
        margin: 0 8vw;
    }

    h2 {
        text-align: left;
    }
}


@media (max-width: 530px) {

    header {
        margin-top: 80px;
        margin-bottom: 80px;
    }

    #features-container {
        -webkit-box-orient: vertical;
        -webkit-box-direction: normal;
            -ms-flex-direction: column;
                flex-direction: column;
        height: -webkit-fit-content;
        height: -moz-fit-content;
        height: fit-content;
    }

    #steps .c-card {
        min-width: 60vw;
    }

}


@media (max-width: 400px) {
    
    h1 {
        font-size: 3em;
    }

    h2, h3 {
        font-size: 2em;
    }

    .c-body-l {
        font-size: 1em;
    }

    .c-body-xl {
        font-size: 1.1em;
    }

    .c-mg-left  {
        margin-left: 4vw;
    }

    .c-mg-horizontal, #answer-questionnaire h2, #answer-questionnaire p, h4 {
        margin-right: 4vw;
        margin-left: 4vw;
    }

    header {
        padding: 20px 0px;
        min-height: auto;
    }

    #steps .c-card {
        min-width: 85vw;
    }

    #features-container {
        -webkit-box-orient: vertical;
        -webkit-box-direction: normal;
            -ms-flex-direction: column;
                flex-direction: column;
    }

    #features h2 {
        margin: 0 4vw;
    }

    .features-card {
        -ms-flex-preferred-size: 48%;
            flex-basis: 48%;
    }

    #project-types-container {
        -ms-flex-wrap: wrap;
            flex-wrap: wrap;
    }

    #project-types-container {
        gap: 10px;
    }

    #testimonials .c-card {
        min-width: 85vw;
    }
 
    #answer-questionnaire .c-pill {
        padding: 20px 24px;
        margin-bottom: 0px;
    }

    #about ol {
        margin-left: 0;
    }

    h4 {
        text-align: left;
    }

    #answer-questionnaire p, #about p, #about ol li, #help-contribute p {
        margin: 0 4vw;
    }

    #about ol li, #help-contribute p {
        margin-bottom: 20px;
    }

    
}

